  the transfer overhead between GDB and the remote target when the
  complete register file of a thread is large.

x addr,length

  Given ADDR and LENGTH, fetch LENGTH units from the memory at address
  ADDR and send the fetched data in binary format.  This packet is
  equivalent to 'm', except that the data in the response are in
  binary format.

* Changed remote packets

qXfer:features:read:target.xml

  The XML that is sent as a response can now include a "device" element
  that can be used for passing information when the remote inferior
  represents a device, e.g.  a GPU.

qXfer:features:read:target.xml

  The XML that is sent as a response can now include an "expedited"
  attribute for a "reg" element.  The attribute indicates whether the
  register is expedited.  Such registers are included in replies to
  the 'e' packet and also in thread stop replies.

qXfer:threads:read

  The XML that is sent as a response can now include an "id_str"
  attribute for a thread element.  The attribute indicates what GDB
  should print as the target ID of the thread, for example in the
  "info threads" command or when switching to the thread.

*** Changes in GDB 15

* The MPX commands "show/set mpx bound" have been deprecated, as Intel
  listed MPX as removed in 2019.

* Building GDB and GDBserver now requires a C++17 compiler.
  For example, GCC 9 or later.

* GDB index now contains information about the main function.  This speeds up
  startup when it is being used for some large binaries.

* On hosts where threading is available, DWARF reading is now done in
  the background, resulting in faster startup.  This can be controlled
  using "maint set dwarf synchronous".

* Changed commands

disassemble
  Attempting to use both the 'r' and 'b' flags with the disassemble
  command will now give an error.  Previously the 'b' flag would
  always override the 'r' flag.

gcore
generate-core-file
  GDB now generates sparse core files, on systems that support it.
