@@ -174,6 +174,11 @@ x addr,length
   equivalent to 'm', except that the data in the response are in
   binary format.
 
+qDeltaThreadList
+
+  Query packet to check if the target supports sending a delta list of
+  threads.
+
 * Changed remote packets
 
 qXfer:features:read:target.xml
